assets/css/style.css
/*-----------------------------------*\
  #style.css
\*-----------------------------------*/

/**
 * copyright 2022 codewithsadee
 */

/*-----------------------------------*\
  #CUSTOM PROPERTY
\*-----------------------------------*/

/* * COLORS */
:root {
  --medium-spring-green: hsl(156, 100%, 50%);
  --red-orange-creyola: hsl(0, 100%, 68%);
  --caribbean-green: hsl(160, 98%, 39%);
  --oxford-blue_50: hsla(213, 86%, 16%, 0.5);
  --oxford-blue_70: hsla(213, 86%, 16%, 0.7);
  --prussian-blue: hsl(210, 100%, 20%);
  --oxford-blue: hsl(213, 86%, 16%);
  --orange-peel: hsl(37, 100%, 50%);
  --cultured_20: hsla(206, 23%, 94%, 0.2);
  --winter-sky: hsl(341, 100%, 60%);
  --light-gray: hsl(0, 0%, 80%);
  --malachite: hsl(120, 70%, 59%);
  --indigo-dye: hsl(213, 81%, 25%);
  --dim-gray: hsl(0, 0%, 41%);
  --black_20: hsla(0, 0%, 0%, 0.2);
  --silver: hsl(0, 0%, 76%);
  --black: hsl(0, 0%, 0%);
  --white: hsl(0, 0%, 100%);

  /* * TYPOGRAPHY */

  --ff-roboto: "Roboto", sans-serif;

  --fs-1: 3rem;
  --fs-2: 2.4rem;
  --fs-3: 2rem;
  --fs-4: 1.8rem;
  --fs-5: 1.5rem;
  --fs-6: 1.4rem;

  --fw-500: 500;
  --fw-700: 700;

  /* * SPACING */
  --section-padding: 100px;

  /* * SHADOW */
  --shadow-1: 0 0 10px hsla(0, 0%, 0%, 0.1);
  --shadow-2: 0 5px 10px hsla(0, 0%, 100%, 0.2);
  --shadow-3: 0 0 24px hsla(341, 100%, 60%, 0.3);

  /* * BORDER RADIUS */
  --radius-circle: 50%;
  --radius-pill: 200px;
  --radius-6: 6px;

  /* * TRANSITION */
  --transition-1: 0.25s ease;
  --transition-2: 0.5s ease;
  --cubic-out: cubic-bezier(0.33, 0.85, 0.4, 0.96);
}

/*-----------------------------------*\
  #RESET
\*-----------------------------------*/
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

li {
  list-style: none;
}

a,
img,
span,
button,
ion-icon {
  display: block;
}

a {
  color: inherit;
  text-decoration: none;
}

img {
  height: auto;
}

button {
  background: none;
  border: none;
  font: inherit;
  cursor: pointer;
}

ion-icon {
  pointer-events: none;
}

address {
  font-style: normal;
}

html {
  font-family: var(--ff-roboto);
  font-size: 10px;
  scroll-behavior: smooth;
}

body {
  background-color: var(--oxford-blue);
  color: var(--white);
  font-size: 1.6rem;
  line-height: 1.5;
  overflow-x: hidden;
}

body.active {
  overflow-y: hidden;
}

:focus-visible {
  outline-offset: 4px;
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background-color: hsl(0, 0%, 98%);
}

::-webkit-scrollbar-thumb {
  background-color: hsl(0, 0%, 98%);
}

::-webkit-scrollbar-thumb:hover {
  background-color: hsl(0, 0%, 70%);
}

/*-----------------------------------*\
  #REUSED STYLE
\*-----------------------------------*/

.container {
  padding-inline: 15px;
}

.section {
  padding-block: var(--section-padding);
}

.has-bg-image {
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.h1,
.h2,
.h3,
.h4 {
  line-height: 1.4;
}


h1 {
  font-size: var(--fs-2);
}

h4 {
  font-size: var(--fs-4);
}


.btn {
  font-size: var(--fs-6);
  font-weight: var(--fs-700);
  text-transform: uppercase;
  max-width: max-content;
  border: 2px solid var(--white);
  padding: 18px 25px;
  border-radius: var(--radius-pill);
  transition: var(--transition-1);
}


/* * when the button is hovered or focused */
.btn-primary:is(:hover, :focus) {
  box-shadow: var(--shadow-2);
}

.w-100 {
  width: 100%;
}


.text {
  font-size: var(--fs-5);
}

.img-holder {
  aspect-ratio: var(--width) / var(--height);
  background-color: var(--light-gray);
  overflow: hidden;
}


.section-text {
  margin-block: 15px 35px;
}



.grid-list {
  display: grid;
  gap: 30px;
}

.img-cover {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: var(--transition-2);
}


/*-----------------------------------*\
  #HEADER
\*-----------------------------------*/

.header .btn {
  display: none;
}

.header {
  background-color: var(--oxford-blue);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-block: 12px;
  box-shadow: var(--shadow-1);
  z-index: 4;
}

.header.active {
  position: fixed;
  animation: slideInTop 0.5s ease forwards;
}

@keyframes slideInTop {
  0% {
    transform: translateY(-100%);
  }

  100% {
    transform: translateY(0);
  }
}

.header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-toggle-btn {
  color: var(--white);
  font-size: 35px;
}

.nav-toggle-btn.active .menu,
.nav-toggle-btn .close {
  display: none;
}


.nav-toggle-btn .menu,
.nav-toggle-btn.active .close {
  display: block;
}


.navbar {
  position: absolute;
  top: 74px;
  left: -350px;
  width: 100%;
  max-width: 350px;
  height: 100vh;
  background-color: var(--oxford-blue);
  padding: 20px;
  transition: 0.25s var(--cubic-out);
  visibility: hidden;
}



.navbar.active {
  visibility: visible;
  transform: translateX(350px);
  transition-duration: 0.5s;

}


.navbar-item:not(:last-child) {
  border-block-end: 1px solid var(--black_20);
}


.navbar-link {
  padding-block: 10px;
  transition: var(--transition-1);
}

.navbar-link:is(:hover, :focus) {
  color: var(--winter-sky);
}

/*-----------------------------------*\
  #HERO
\*-----------------------------------*/


.hero {
  padding-block-start: calc(var(--section-padding) + 75px);
}

.hero .container {
  display: grid;
  gap: 20px;
}

.hero-text {
  font-size: var(--fs-3);
  font-weight: var(--fw-500);
  margin-block: 8px;
}

.hero .counter {
  color: var(--medium-spring-green);
  font-size: var(--fs-2);
  font-weight: var(--fw-700);
}

.hero-list {
  margin-block: 8px 20px;
}

.hero-list-item {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: var(--fs-4);
  /* in order to make the point shape to the circle */
  padding-inline-start: 20px;
  padding-block: 8px;
}


.hero-list-item::before {
  content: "";
  position: absolute;
  left: 0;
  top: 50%;
  width: 10px;
  height: 10px;
  /* background-color: var(--white); */
  transform: translateY(-50%);
  border-radius: var(--radius-circle);
}

.hero-list-item.yellow::before {
  background-color: var(--orange-peel);
}

.hero-list-item.green::before {
  background-color: var(--malachite);
}

.hero-list-item.red::before {
  background-color: var(--red-orange-creyola);
}


.hero-banner .w-100 {
  animation: rotate 20s linear infinite;
}

@keyframes rotate {
  0% {
    transform: rotate(0);
  }

  100% {
    transform: rotate(360deg);
  }

}



/*-----------------------------------*\
  #ABOUT
\*-----------------------------------*/


.about .container {
  display: grid;
  gap: 30px;
}


.about-subtitle {
  font-size: var(--fs-4);
  color: var(--medium-spring-green);
}

.about .section-text {
  margin-block: 8px 15px;
}

.about-list {
  margin-block-start: 30px;
}


.about-item {
  display: flex;
  align-items: flex-start;
  gap: 15px;
  padding-block: 15px;
}

.about .item-img {
  flex-shrink: 0;
  border-radius: var(--radius-circle);
}


.about .item-title {
  margin-block-end: 5px;
}


/*-----------------------------------*\
  #SERVICE
\*-----------------------------------*/
.service {
  text-align: center;
}


.service-list {
  display: grid;
  gap: 10px;
}

.service-card {
  background-color: var(--oxford-blue_50);
  padding: 20px;
  border-radius: var(--radius-6);
  transition: var(--transition-1);
}


.service-card .card-banner {
  max-width: max-content;
  margin-inline: auto;
  border-radius: var(--radius-circle);
}


.service-card .card-banner img {
  width: 95px;
}

.service-card .card-title {
  margin-block: 20px 5px;
}

.service-card :is(.card-title, .card-text) {
  transition: var(--transition-1);
}

.service-card:hover {
  background-color: var(--white);
  transform: translateY(-5px);
}


.service-card:hover .card-title {
  color: var(--black);
}


.service-card:hover .card-text {
  color: var(--dim-gray);
}


/*-----------------------------------*\
  #DOCTOR
\*-----------------------------------*/

.doctor :is(.section-title, .section-text) {
  text-align: center;
}


.doctor-card {
  background-color: var(--oxford-blue_70);
  padding: 10px;
}


.doctor-card:is(:hover, :focus-within) .img-cover {
  transform: scale(1.05);
}


.doctor-card .card-content {
  padding: 20px;
}

.doctor-card .card-subtitle {
  margin-block: 5px 10px;
}

.doctor-card .card-text {
  border-block-start: 1px solid var(--cultured_20);
  padding-block-start: 15px;
  margin-block-end: 20px;
}

.doctor-card .card-item {
  border: 1px solid var(--cultured_20);
  display: flex;
  align-items: center;
}

.doctor-card .card-item:last-child {
  border-block-start: none;
}

.doctor-card .card-item .icon-box {
  color: var(--silver);
  padding: 22px;
  border-inline-end: 1px solid var(--cultured_20);
}

.doctor-card .card-item .span {
  margin-inline: 15px;
  padding-block: 5px;
  word-break: break-all;
}

/*-----------------------------------*\
  #SAFETY
\*-----------------------------------*/

.safety .section-text {
  margin-block-end: 55px;
}


.safety {
  text-align: center;
}


.safety-list {
  display: grid;
  gap: 50px;
}




.safety-item {
  position: relative;
}


.safety-item .item-banner {
  max-width: max-content;
  border-radius: var(--radius-circle);
  margin-inline: auto;
  margin-block-end: 20px;
}


.safety-item .number {
  position: absolute;
  top: -21px;
  left: 50%;
  transform: translate(-50%);
  background-color: var(--caribbean-green);
  display: grid;
  place-content: center;
  width: 42px;
  height: 42px;
  border-radius: var(--radius-circle);
  border: 3px solid var(--oxford-blue);
  font-weight: var(--fw-700);
}




/*-----------------------------------*\
  #BLOG
\*-----------------------------------*/
.blog {
  background-color: var(--indigo-dye);
}

.blog :is(.section-title, .section-text) {
  text-align: center;
}

.blog-card :is(.card-content, .card-footer) {
  background-color: var(--prussian-blue);
  padding: 20px;
}

.blog-card .card-title {
  transition: var(--transition-1);
}

.blog-card .card-title:is(:hover, :focus) {
  color: var(--winter-sky);
}


.blog-card .card-meta {
  margin-block: 15px;
}

.blog-card .card-meta .wrapper {
  display: flex;
  align-items: center;
  gap: 5px;
  padding-block: 2px;
}


.blog-card .card-footer {
  border-block-start: 1px solid var(--cultured_20);
}

.btn-link {
  font-weight: var(--fw-700);
}

/*-----------------------------------*\
  #FOOTER
\*-----------------------------------*/


.footer-top {
  display: grid;
  gap: 60px;
}

.footer-list-title,
.footer-text {
  margin-block-end: 15px;
}


.contact-item {
  display: flex;
  flex-wrap: wrap;
  gap: 8px 10px;
}

.contact-item:not(:last-child) {
  margin-block-end: 15px;
}

.contact-title {
  font-size: var(--fs-5);
  font-weight: var(--fw-700);
}


.footer-list-item {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-block-start: 15px;
}



.footer-list:not(.social-list) ion-icon {
  font-size: 14px;
}


.footer-bottom {
  padding-block: 35px;
  text-align: center;
  border-block-start: 1px solid var(--cultured_20);
}

/*-----------------------------------*\
  #BACK TO TOP
\*-----------------------------------*/

/*-----------------------------------*\
  #MEDIA QUERIES
\*-----------------------------------*/

