[.back-top-btn] was set to fixed and border was added to show the arrow button, it was set to hidden by default until the the class contains [.active]class.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -723,6 +723,26 @@ h4 {
   #BACK TO TOP
 \*-----------------------------------*/
 
+.back-top-btn {
+  position: fixed;
+  bottom: 10px;
+  right: 20px;
+  background-color: var(--winter-sky);
+  font-size: 18px;
+  padding: 12px;
+  border-radius: var(--radius-circle);
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--transition-1);
+  z-index: 4;
+}
+
+.back-top-btn.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(-10px);
+}
+
 /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
